[gd_scene load_steps=8 format=3 uid="uid://84ixct37xa74"]

[ext_resource type="Script" path="res://scripts/menus/stats_panel/minions_panel/minion_slot_panel.gd" id="1_mfddu"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_nhnmf"]
[ext_resource type="Texture2D" uid="uid://d0khv3xfdmywv" path="res://graphics/ui/exclamation.png" id="3_ahsj7"]
[ext_resource type="Texture2D" uid="uid://ufmhvke6f8x8" path="res://graphics/ui/new_move_indicator.png" id="3_l5kqy"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="4_2cbfe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sjlhe"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k3y6f"]

[node name="MinionSlotPanel" type="Panel" groups=["MinionSlotPanel"]]
custom_minimum_size = Vector2(548, 69)
theme = ExtResource("1_nhnmf")
theme_override_styles/panel = SubResource("StyleBoxEmpty_sjlhe")
script = ExtResource("1_mfddu")

[node name="SpriteControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -24.5
offset_right = 52.0
offset_bottom = 23.5
grow_vertical = 2

[node name="MinionSprite" type="AnimatedSprite2D" parent="SpriteControl"]
position = Vector2(24, 24)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_k3y6f")

[node name="MinionName" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 55.0
offset_top = -12.5
offset_right = 313.0
offset_bottom = 13.5
grow_vertical = 2
text = "Minion Name Goes Here"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MoveIndicatorControl" type="Control" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/VBoxContainer2/MoveIndicatorControl"]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("3_l5kqy")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StatPtIndicatorControl" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/VBoxContainer/StatPtIndicatorControl"]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("3_ahsj7")

[node name="ReorderButton" parent="HBoxContainer" instance=ExtResource("4_2cbfe")]
layout_mode = 2
text = "Reorder"

[node name="StatsButton" parent="HBoxContainer" instance=ExtResource("4_2cbfe")]
layout_mode = 2
text = "Stats"

[connection signal="pressed" from="HBoxContainer/ReorderButton" to="." method="_on_reorder_button_pressed"]
[connection signal="pressed" from="HBoxContainer/StatsButton" to="." method="_on_stats_button_pressed"]
